[package]
name = "poseidon2-starky"
version = "0.1.0"

categories = ["cryptography"]
description = "Implementation of the Poseidon2 hash function"
edition = "2021"
keywords = ["crypto", "zero-knowledge"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0xmozak/hashes"

[dependencies]
anyhow = "1.0.71"
ark-ff = { version = "^0.4.2", default-features = false }
lazy_static = "1.4"
num = { version = "0.4", default-features = false, features = ["rand"] }
plonky2 = "0.1.3"
proptest = "1.2.0"
starky = "0.1.1"
zkhash = { git = "https://github.com/0xmozak/poseidon2", package = "zkhash" }
